fix: channge log-format to json

--- a/nginx.conf
+++ b/nginx.conf
@@ -47,7 +47,7 @@ http {
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
-    log_format bodylog '$remote_addr - $remote_user [$time_local] '
+    log_format bodylog escape=json '$remote_addr - $remote_user [$time_local] '
         '"$request" $status $body_bytes_sent '
         '"$http_referer" "$http_user_agent" $request_time '
         '<"$request_body" >"$resp_body"';
