--- a/nginx.conf
+++ b/nginx.conf
@@ -50,7 +50,8 @@ http {
     log_format bodylog escape=json '$remote_addr - $remote_user [$time_local] '
         '"$request" $status $body_bytes_sent '
         '"$http_referer" "$http_user_agent" $request_time '
-        '<"$request_body" >"$resp_body"';
+        '"$sent_http_account_id" '
+        '"$request_body" "$resp_body"';
 
     #access_log  logs/access.log  main;
 
